# madsuite.org

./: .gitignore  CNAME  README.md  index.html  pyproject.toml
.github/workflow/: deploy.yml
.github/workflows/: deploy.yml
madsuiteio/: __init__.py  __main__.py
madsuiteio/data/: data.yaml  references.bib
madsuiteorg/: __init__.py  __main__.py
madsuiteorg/data/: data.yaml  references.bib  template.html
